--- a/pgs66/templates/projects_templateDVP.html
+++ b/pgs66/templates/projects_templateDVP.html
@@ -107,6 +107,22 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Photo_2</label>
+			<div class="col-xs-9">
+				<div class="form-control-static">
+<img src="<%%TRANSLATION(ImageFolder)%%><%%VALUE(ot_Photo02)%%>" class="img-responsive img-thumbnail">
+</div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Photo_3</label>
+			<div class="col-xs-9">
+				<div class="form-control-static">
+<img src="<%%TRANSLATION(ImageFolder)%%><%%VALUE(ot_Photo03)%%>" class="img-responsive img-thumbnail">
+</div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Review</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ot_ap_Review<%%RND1%%>"><%%COMBOTEXT(ot_ap_Review)%%></span></div>
