--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -7019,7 +7019,7 @@ font-size: 2.2rem;
 }
 .summary-counter-wrapper {
   background: #F0F3FA;
-  margin-top: 120px;
+  /* margin-top: 120px; */
   padding: 0 10px;
   position: relative;
 }
