--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -61,7 +61,6 @@
 		<li class="nav-item"> <a class="nav-link" data-target="#carouselDetail" data-slide-to="1" role="tab"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Attachment</span></a> </li>
 		<li class="nav-item"> <a class="nav-link" data-target="#carouselDetail" data-slide-to="2" role="tab"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Review</span></a> </li>
 	</ul> -->
-	<div class="row">
 	<ul class="nav nav-tabs customtab2 d-block w-100" role="tablist">
 		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Description</span></a> </li>
 		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Attachment" role="tab"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Attachment</span></a> </li>
@@ -415,7 +414,6 @@
 			</div>
 		</div>
 	</div>
-</div>
 	
 	<!-- form inputs -->
 	<!-- <div class="col-md-8 col-lg-10" id="projects_dv_form">
@@ -465,10 +463,8 @@
 
 
 <!-- child records -->
-<div class="row">
-	<div class="col-lg-10 col-lg-offset-1">
-		<div id="projects-children" class="children-tabs"></div>
-	</div>
+<div class="panel-body">
+	<div id="projects-children" class="children-tabs"></div>
 </div>
 
 </div><!-- /div class="panel-body" -->
