--- a/devtemplate/templates/employees_templateDV.html
+++ b/devtemplate/templates/employees_templateDV.html
@@ -40,6 +40,14 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
+					<label for="memberID" class="control-label col-lg-3" data-parent_link="view_parent_hidden">Member ID<span class="text-danger"><%%TRANSLATION(*)%%></span></label>
+					<div class="col-lg-9">
+						<div class="form-control-static" style="white-space: nowrap; overflow-x: hidden;"><%%COMBO(memberID)%%></div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<hr class="hidden-md hidden-lg">
 					<label for="EmpNo" class="control-label col-lg-3">Employee Number<span class="text-danger"><%%TRANSLATION(*)%%></span> <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#EmpNo-description"></i></label>
 					<div class="col-lg-9">
 						<span class="help-block collapse" id="EmpNo-description"><div class="alert alert-info">Dedicated ID for the employee. this serve as the digital file number for reference.</div></span>
