--- a/devtemplate/templates/employees_templateDVP.html
+++ b/devtemplate/templates/employees_templateDVP.html
@@ -21,6 +21,12 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Member ID</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><span id="memberID<%%RND1%%>"><%%COMBOTEXT(memberID)%%></span></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Employee Number</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(EmpNo)%%></div>
