radio -> button styling view drag n drop attachments

--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -208,8 +208,10 @@
 				</div>
 			</div>
 
+			<hr><br>
+
 			<div class="form-group row">
-				<label class="control-label col-lg-2">Document<div class="text-muted">Attached <span id="totalLinkAttached"></span>/3</div></label>
+				<label class="control-label col-lg-2">Document<div class="text-muted">Attached <span id="totalDocumentAttached"></span>/3</div></label>
 				<div class="col-lg-10">
 					<a id="ot_Ref01-link" href="link.php?t=projects&f=ot_Ref01&i=<%%VALUE(Id)%%>"
 						target="_blank">
@@ -217,7 +219,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Ref01 = '<%%VALUE(ot_Ref01)%%>'; if (e_ot_Ref01 == '' || e_ot_Ref01 == '&nbsp;' || e_ot_Ref01 == 'blank.gif') jQuery('#ot_Ref01-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Ref01)%%>
 							<%%REMOVEFILE(ot_Ref01)%%>
@@ -231,7 +233,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Ref02 = '<%%VALUE(ot_Ref02)%%>'; if (e_ot_Ref02 == '' || e_ot_Ref02 == '&nbsp;' || e_ot_Ref02 == 'blank.gif') jQuery('#ot_Ref02-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Ref02)%%>
 							<%%REMOVEFILE(ot_Ref02)%%>
@@ -245,7 +247,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Ref03 = '<%%VALUE(ot_Ref03)%%>'; if (e_ot_Ref03 == '' || e_ot_Ref03 == '&nbsp;' || e_ot_Ref03 == 'blank.gif') jQuery('#ot_Ref03-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Ref03)%%>
 							<%%REMOVEFILE(ot_Ref03)%%>
@@ -256,6 +258,8 @@
 				</div>
 			</div>
 
+			<hr><br>
+
 			<div class="form-group row">
 				<label class="control-label col-lg-2">Compressed Folder<div class="text-muted">Attached <span id="totalCompFolderAttached"></span>/3</div></label>
 				<div class="col-lg-10">
@@ -265,7 +269,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Ref04 = '<%%VALUE(ot_Ref04)%%>'; if (e_ot_Ref04 == '' || e_ot_Ref04 == '&nbsp;' || e_ot_Ref04 == 'blank.gif') jQuery('#ot_Ref04-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Ref04)%%>
 							<%%REMOVEFILE(ot_Ref04)%%>
@@ -279,7 +283,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Ref05 = '<%%VALUE(ot_Ref05)%%>'; if (e_ot_Ref05 == '' || e_ot_Ref05 == '&nbsp;' || e_ot_Ref05 == 'blank.gif') jQuery('#ot_Ref05-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Ref05)%%>
 							<%%REMOVEFILE(ot_Ref05)%%>
@@ -293,7 +297,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Ref06 = '<%%VALUE(ot_Ref06)%%>'; if (e_ot_Ref06 == '' || e_ot_Ref06 == '&nbsp;' || e_ot_Ref06 == 'blank.gif') jQuery('#ot_Ref06-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Ref06)%%>
 							<%%REMOVEFILE(ot_Ref06)%%>
@@ -306,8 +310,10 @@
 				</div>
 			</div>
 
+			<hr><br>
+
 			<div class="form-group row">
-				<label class="control-label col-lg-2">Photo<div class="text-muted">Attached <span id="totalLinkAttached"></span>/3</div></label>
+				<label class="control-label col-lg-2">Photo<div class="text-muted">Attached <span id="totalPhotoAttached"></span>/3</div></label>
 				<div class="col-lg-10">
 					<a id="ot_Photo01-link"
 						href="link.php?t=projects&f=ot_Photo01&i=<%%VALUE(Id)%%>" target="_blank">
@@ -315,7 +321,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Photo01 = '<%%VALUE(ot_Photo01)%%>'; if (e_ot_Photo01 == '' || e_ot_Photo01 == '&nbsp;' || e_ot_Photo01 == 'blank.gif') jQuery('#ot_Photo01-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Photo01)%%>
 							<%%REMOVEFILE(ot_Photo01)%%>
@@ -329,7 +335,7 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Photo02 = '<%%VALUE(ot_Photo02)%%>'; if (e_ot_Photo02 == '' || e_ot_Photo02 == '&nbsp;' || e_ot_Photo02 == 'blank.gif') jQuery('#ot_Photo02-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Photo02)%%>
 							<%%REMOVEFILE(ot_Photo02)%%>
@@ -343,15 +349,15 @@
 					</a>
 					<script>jQuery(function () { /* */ var e_ot_Photo03 = '<%%VALUE(ot_Photo03)%%>'; if (e_ot_Photo03 == '' || e_ot_Photo03 == '&nbsp;' || e_ot_Photo03 == 'blank.gif') jQuery('#ot_Photo03-link').hide(); });</script>
 
-					<div style="overflow-x: hidden;font-size: small;">
+					<div style="overflow-x: hidden;font-size: small;" >
 						<div class="hidden-md hidden-lg vspacer-lg"></div>
 						<%%UPLOADFILE(ot_Photo03)%%>
 							<%%REMOVEFILE(ot_Photo03)%%>
 					</div>
 					<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addPhoto"><i class="fa fa-plus" aria-hidden="true"></i></button>
 					<br />
-					<p class="control-label text-muted">Maximum file size allowed: 10000KB.<br>Allowed file types: jpg, jpeg, gif, png</label>
-
+					<p class="control-label text-muted col-lg-12 col-md-12">Maximum file size allowed: 10000KB.<br>Allowed file types: jpg, jpeg, gif, png</p>
+					
 				</div>
 			</div>
 		</div>
@@ -364,17 +370,12 @@
 					<div class="form-control-static" style="white-space: nowrap; overflow-x: hidden;">
 						<%%COMBO(ot_ap_Review)%%>
 					</div>
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<hr class="hidden-md hidden-lg">
-				<label for="ot_ap_RevComment" class="control-label col-lg-3">Review Comment</label>
-				<div class="col-lg-9">
 					<textarea class="form-control" name="ot_ap_RevComment" id="ot_ap_RevComment"
-						rows="5"><%%VALUE(ot_ap_RevComment)%%></textarea>
+						rows="5" placeholder="Review Comment"><%%VALUE(ot_ap_RevComment)%%></textarea>
 				</div>
 			</div>
+			
+			<hr><br>
 
 			<div class="form-group row">
 				<hr class="hidden-md hidden-lg">
@@ -384,17 +385,12 @@
 					<div class="form-control-static" style="white-space: nowrap; overflow-x: hidden;">
 						<%%COMBO(ot_ap_Approval)%%>
 					</div>
+					<textarea class="form-control" name="ot_ap_ApprComment" id="ot_ap_ApprComment"
+					rows="5" placeholder="Approval Comment"><%%VALUE(ot_ap_ApprComment)%%></textarea>
 				</div>
 			</div>
 
-			<div class="form-group row">
-				<hr class="hidden-md hidden-lg">
-				<label for="ot_ap_ApprComment" class="control-label col-lg-3">Approval Comment</label>
-				<div class="col-lg-9">
-					<textarea class="form-control" name="ot_ap_ApprComment" id="ot_ap_ApprComment"
-						rows="5"><%%VALUE(ot_ap_ApprComment)%%></textarea>
-				</div>
-			</div>
+			<hr><br>
 
 			<div class="form-group row">
 				<hr class="hidden-md hidden-lg">
@@ -404,17 +400,11 @@
 					<div class="form-control-static" style="white-space: nowrap; overflow-x: hidden;">
 						<%%COMBO(ot_ap_QC)%%>
 					</div>
+					<textarea class="form-control" name="ot_ap_QCComment" id="ot_ap_QCComment"
+						rows="5" placeholder="IMS Control Comment"><%%VALUE(ot_ap_QCComment)%%></textarea>
 				</div>
 			</div>
 
-			<div class="form-group row">
-				<hr class="hidden-md hidden-lg">
-				<label for="ot_ap_QCComment" class="control-label col-lg-3">IMS Control Comment</label>
-				<div class="col-lg-9">
-					<textarea class="form-control" name="ot_ap_QCComment" id="ot_ap_QCComment"
-						rows="5"><%%VALUE(ot_ap_QCComment)%%></textarea>
-				</div>
-			</div>
 		</div>
 	</div>
 	
@@ -645,12 +635,14 @@
 			if ($j('#ot_Ref02').val().length > 0) {
 				_x++;
 			} else {
-				$j('#ot_Ref02').hide()
+				// $j('#ot_Ref02').hide();
+				$j("#ot_Ref02").parent().hide();
 			}
 			if ($j('#ot_Ref03').val().length > 0) {
 				_x++;
 			} else {
-				$j('#ot_Ref03').hide();
+				// $j('#ot_Ref03').hide();
+				$j("#ot_Ref03").parent().hide();
 			}
 			$j('#totalDocumentAttached').html(_x);
 
@@ -677,15 +669,18 @@
 
 			$j("#addDocument").click(function () {
 
-				if (!$j("#ot_Ref01").is(":visible")) {
-					$j("#ot_Ref01").show();
-				} else if (!$j("#ot_Ref02").is(":visible")) {
-					$j("#ot_Ref02").show();
-				} else if (!$j("#ot_Ref03").is(":visible")) {
-					$j("#ot_Ref03").show();
+				if (!$j("#ot_Ref01").parent().parent().is(":visible")) {
+					// $j("#ot_Ref01").show();
+					$j("#ot_Ref01").parent().parent().show();
+				} else if (!$j("#ot_Ref02").parent().parent().is(":visible")) {
+					// $j("#ot_Ref02").show();
+					$j("#ot_Ref02").parent().parent().show();
+				} else if (!$j("#ot_Ref03").parent().parent().is(":visible")) {
+					// $j("#ot_Ref03").show();
+					$j("#ot_Ref03").parent().parent().show();
 				}
 
-				if ($j("#ot_Ref01").is(":visible") && $j("#ot_Ref02").is(":visible") && $j("#ot_Ref03").is(":visible")) {
+				if ($j("#ot_Ref01").parent().parent().is(":visible") && $j("#ot_Ref02").parent().parent().is(":visible") && $j("#ot_Ref03").parent().parent().is(":visible")) {
 					$j("#addDocument").hide();
 				}
 			});
@@ -704,12 +699,12 @@
 			if ($j('#ot_Ref05').val().length > 0) {
 				_x++;
 			} else {
-				$j('#ot_Ref05').hide()
+				$j('#ot_Ref05').parent().hide()
 			}
 			if ($j('#ot_Ref06').val().length > 0) {
 				_x++;
 			} else {
-				$j('#ot_Ref06').hide();
+				$j('#ot_Ref06').parent().hide();
 			}
 			$j('#totalCompFolderAttached').html(_x);
 
@@ -736,15 +731,15 @@
 
 			$j("#addCompFolder").click(function () {
 
-				if (!$j("#ot_Ref04").is(":visible")) {
-					$j("#ot_Ref04").show();
-				} else if (!$j("#ot_Ref05").is(":visible")) {
-					$j("#ot_Ref05").show();
-				} else if (!$j("#ot_Ref06").is(":visible")) {
-					$j("#ot_Ref06").show();
+				if (!$j("#ot_Ref04").parent().parent().is(":visible")) {
+					$j("#ot_Ref04").parent().parent().show();
+				} else if (!$j("#ot_Ref05").parent().parent().is(":visible")) {
+					$j("#ot_Ref05").parent().parent().show();
+				} else if (!$j("#ot_Ref06").parent().parent().is(":visible")) {
+					$j("#ot_Ref06").parent().parent().show();
 				}
 
-				if ($j("#ot_Ref04").is(":visible") && $j("#ot_Ref05").is(":visible") && $j("#ot_Ref06").is(":visible")) {
+				if ($j("#ot_Ref04").parent().parent().is(":visible") && $j("#ot_Ref05").parent().parent().is(":visible") && $j("#ot_Ref06").parent().parent().is(":visible")) {
 					$j("#addCompFolder").hide();
 				}
 			});
@@ -763,12 +758,12 @@
 			if ($j('#ot_Photo02').val().length > 0) {
 				_x++;
 			} else {
-				$j('#ot_Photo02').hide()
+				$j('#ot_Photo02').parent().hide()
 			}
 			if ($j('#ot_Photo03').val().length > 0) {
 				_x++;
 			} else {
-				$j('#ot_Photo03').hide();
+				$j('#ot_Photo03').parent().hide();
 			}
 			$j('#totalPhotoAttached').html(_x);
 
@@ -795,15 +790,15 @@
 
 			$j("#addPhoto").click(function () {
 
-				if (!$j("#ot_Photo01").is(":visible")) {
-					$j("#ot_Photo01").show();
-				} else if (!$j("#ot_Photo02").is(":visible")) {
-					$j("#ot_Photo02").show();
-				} else if (!$j("#ot_Photo03").is(":visible")) {
-					$j("#ot_Photo03").show();
+				if (!$j("#ot_Photo01").parent().parent().is(":visible")) {
+					$j("#ot_Photo01").parent().parent().show();
+				} else if (!$j("#ot_Photo02").parent().parent().is(":visible")) {
+					$j("#ot_Photo02").parent().parent().show();
+				} else if (!$j("#ot_Photo03").parent().parent().is(":visible")) {
+					$j("#ot_Photo03").parent().parent().show();
 				}
 
-				if ($j("#ot_Photo01").is(":visible") && $j("#ot_Photo02").is(":visible") && $j("#ot_Photo03").is(":visible")) {
+				if ($j("#ot_Photo01").parent().parent().is(":visible") && $j("#ot_Photo02").parent().parent().is(":visible") && $j("#ot_Photo03").parent().parent().is(":visible")) {
 					$j("#addPhoto").hide();
 				}
 			});
@@ -956,6 +951,49 @@
 			if ($j('#deselect.btn-warning').length) {
 				return confirm('<%%TRANSLATION(discard changes confirm)%%>');
 			}
+		});
+
+		/////////////////DROPIFY/////////////////////////
+
+		$j(document).ready(function(){
+			// Basic
+			$j('.dropify').dropify();
+
+			// Translated
+			$j('.dropify-fr').dropify({
+				messages: {
+					default: 'Glissez-déposez un fichier ici ou cliquez',
+					replace: 'Glissez-déposez un fichier ou cliquez pour remplacer',
+					remove:  'Supprimer',
+					error:   'Désolé, le fichier trop volumineux'
+				}
+			});
+
+			// Used events
+			var drEvent = $j('#input-file-events').dropify();
+
+			drEvent.on('dropify.beforeClear', function(event, element){
+				return confirm("Do you really want to delete \"" + element.file.name + "\" ?");
+			});
+
+			drEvent.on('dropify.afterClear', function(event, element){
+				alert('File deleted');
+			});
+
+			drEvent.on('dropify.errors', function(event, element){
+				console.log('Has Errors');
+			});
+
+			var drDestroy = $j('#input-file-to-destroy').dropify();
+			drDestroy = drDestroy.data('dropify')
+			$j('#toggleDropify').on('click', function(e){
+				e.preventDefault();
+				if (drDestroy.isDropified()) {
+					drDestroy.destroy();
+				} else {
+					drDestroy.init();
+				}
+			})
 		});
 
 	});
