--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -83,6 +83,42 @@ display: inline-block; }
 .carousel-item-next, .carousel-item-prev, .carousel-item.active {
 display: block; }
 
+.tab-pane .form-control-static input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.tab-pane .form-control-static label {
+  display: inline-block;
+  background-color: #ddd;
+  padding: 10px 20px;
+  font-family: sans-serif, Arial;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
+.tab-pane .form-control-static input[value="1"]:checked + label {
+  background-color:#009efb;
+  color:white;
+  font-weight:bold;
+}
+.tab-pane .form-control-static input[value="2"]:checked + label {
+  background-color:#55ce63;
+  color:white;
+  font-weight:bold;
+}
+.tab-pane .form-control-static input[value="3"]:checked + label {
+  background-color:#ffbc34;
+  color:white;
+  font-weight:bold;
+}
+.tab-pane .form-control-static input[value="4"]:checked + label {
+  background-color:#7460ee;
+  color:white;
+  font-weight:bold;
+}
+
 .img-rounded {
 border-radius: 4px; }
 
