--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -437,7 +437,7 @@
 
 	<!-- DV action buttons -->
 	<hr class="hidden-md hidden-lg">
-	<!-- <div class="col-md-4 col-lg-2" id="projects_dv_action_buttons">
+	<div class="col-md-4 col-lg-2" id="projects_dv_action_buttons">
 			<div class="btn-toolbar">
 				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
 					<%%UPDATE_BUTTON%%>
@@ -451,7 +451,7 @@
 					<%%INSERT_BUTTON%%>
 				</div>
 			</div>
-		</div> -->
+		</div>
 </div>
 
 
