--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -67,6 +67,28 @@ p {
   font-size: 1.4rem;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #6c757d; 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #6c757d; 
+}
+
 a:hover, a:focus {
 text-decoration: none; }
 
@@ -99,12 +121,12 @@ display: block; }
 }
 
 .tab-pane .form-control-static input[value="1"]:checked + label {
-  background-color:#009efb;
+  background-color:#f62d51;
   color:white;
   font-weight:bold;
 }
 .tab-pane .form-control-static input[value="2"]:checked + label {
-  background-color:#55ce63;
+  background-color:#009efb;
   color:white;
   font-weight:bold;
 }
@@ -114,7 +136,7 @@ display: block; }
   font-weight:bold;
 }
 .tab-pane .form-control-static input[value="4"]:checked + label {
-  background-color:#7460ee;
+  background-color:#55ce63;
   color:white;
   font-weight:bold;
 }
