some code enhancement (still work in progress)

--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -203,7 +203,7 @@
 						<button type="button" class="btn  btn-sm btn-outline-danger m-b-5"
 							id="ot_SharedLink2_remove">Remove</button>
 
-						<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addLink"><i class="fa fa-plus" aria-hidden="true"></i></button>
+						<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addLink" for="editAttachment"><i class="fa fa-plus" aria-hidden="true"></i></button>
 
 				</div>
 			</div>
@@ -252,8 +252,8 @@
 						<%%UPLOADFILE(ot_Ref03)%%>
 							<%%REMOVEFILE(ot_Ref03)%%>
 					</div>
-					<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addDocument"><i class="fa fa-plus" aria-hidden="true"></i></button>
-					<p class="control-label text-muted">Maximum file size allowed: 64000KB.<br>Allowed file types: txt, doc, docx, docm, odt, pdf, rtf</p>
+					<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addDocument" for="editAttachment"><i class="fa fa-plus" aria-hidden="true"></i></button>
+					<p class="control-label text-muted" for="editAttachment">Maximum file size allowed: 64000KB.<br>Allowed file types: txt, doc, docx, docm, odt, pdf, rtf</p>
 
 				</div>
 			</div>
@@ -302,10 +302,10 @@
 						<%%UPLOADFILE(ot_Ref06)%%>
 							<%%REMOVEFILE(ot_Ref06)%%>
 					</div>
-					<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addCompFolder"><i class="fa fa-plus" aria-hidden="true"></i></button>
+					<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addCompFolder" for="editAttachment"><i class="fa fa-plus" aria-hidden="true"></i></button>
 
 					<br />
-					<p class="control-label text-muted">Maximum file size allowed: 64000KB.<br>Allowed file types: zip, rar, gz, tar, iso</p>
+					<p class="control-label text-muted" for="editAttachment">Maximum file size allowed: 64000KB.<br>Allowed file types: zip, rar, gz, tar, iso</p>
 
 				</div>
 			</div>
@@ -354,9 +354,9 @@
 						<%%UPLOADFILE(ot_Photo03)%%>
 							<%%REMOVEFILE(ot_Photo03)%%>
 					</div>
-					<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addPhoto"><i class="fa fa-plus" aria-hidden="true"></i></button>
+					<button type="button" class="btn btn-circle btn-sm btn-light btn-block mx-auto" id="addPhoto" for="editAttachment"><i class="fa fa-plus" aria-hidden="true"></i></button>
 					<br />
-					<p class="control-label text-muted">Maximum file size allowed: 10000KB.<br>Allowed file types: jpg, jpeg, gif, png</p>
+					<p class="control-label text-muted" for="editAttachment">Maximum file size allowed: 10000KB.<br>Allowed file types: jpg, jpeg, gif, png</p>
 					
 				</div>
 			</div>
