letterhead-printing logic and placeholder. pending on finalise style (if any)

--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -67,6 +67,20 @@ p {
   font-size: 1.4rem;
 }
 
+#printOnly {
+  display : none;
+}
+
+@media print {
+   #printOnly {
+      display : block;
+   }
+
+   .left-sidebar{
+     display:none;
+   }
+}
+
 ::-webkit-scrollbar {
   width: 12px;
 }
