--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -66,28 +66,13 @@ background: #ffffff; }
 p {
   font-size: 1.4rem;
 }
-
-#printOnly {
-  display : none;
-}
-
-@media print {
-   #printOnly {
-      display : block;
-   }
-
-   .left-sidebar{
-     display:none;
-   }
-}
-
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);  */
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
@@ -96,13 +81,12 @@ p {
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  background: #6c757d; 
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  background: #eee; 
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);  */
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: #6c757d; 
+  background: #eee; 
 }
-
 a:hover, a:focus {
 text-decoration: none; }
 
@@ -1244,7 +1228,18 @@ Buttons
   color: #ffffff;
   border-color: #163e6a;
 }
+.btn-outline-plain {
+  color:#54667a;
+  background-color: #ffffff;
+  border-color: rgba(120, 130, 140, 0.13);
+}
 
+.btn-outline-plain:hover,
+.btn-outline-plain:focus,
+.btn-outline-plain.focus {
+  background: #f2f4f8;
+  opacity: 0.8;
+}
 .btn-outline-success {
   color: #0abb87;
   background-color: transparent;
@@ -5499,7 +5494,9 @@ background: #fff; }
       display: block;
       font-size: 15px; }
       .sidebar-nav ul li a.active, .sidebar-nav ul li a:hover {
-        color: #009efb; }
+        color: #009efb;
+        background-color: #ffffff;
+        background-image: none; }
       .sidebar-nav ul li a.active {
         font-weight: 400;
         color: #263238; }
@@ -5985,11 +5982,15 @@ padding: 24px 0px; }
 background: #ffffff;
 border: 1px solid rgba(120, 130, 140, 0.13);
 color: #54667a;
-text-transform: capitalize; }
+text-transform: capitalize;
+padding: 7px 12px; }
 .fc-button:hover {
   background: #f2f4f8;
   opacity: 0.8; }
-
+.fc-icon{
+  line-height: 2em;
+  overflow: inherit;
+}
 .fc-text-arrow {
 font-family: inherit;
 font-size: 16px; }
@@ -6827,7 +6828,7 @@ button.login {
     color: #AC3A61;
   }
   #page-wrapper{
-    top: 60px;
+    top: 10px;
     background: #F0F3FA;
     min-height: 750px;
   }
@@ -7084,7 +7085,9 @@ display: none;
   border: 0;
 }
 .footerd{
-  margin-top: 50px;
+  padding: 15px;
+  font-size: 1.2rem;
+  text-align: center;
   left: 0;
   right: 0;
   width: 100%;
@@ -7108,8 +7111,9 @@ display: none;
   position: relative;
 }
 .page-wrapper{
-  padding-top: 122px;
+  padding-top: 155px;
   padding-bottom: 0px;
+  min-height: 94vh;
 }
 .summary-counter-wrapper {
   /* background: #F0F3FA; */
@@ -7142,4 +7146,59 @@ display: none;
   background-color: #d1ecf1;
   border-color: #bee5eb;
   background-image: none;
+}
+.cal-row-head [class*="cal-cell"]:first-child, .cal-row-head [class*="cal-cell"]{
+  font-size: 1.6rem;  
+}
+span[data-cal-date]{
+  opacity: 0.6;
+}
+.cal-day-outmonth span[data-cal-date]{
+  opacity: 0.3;
+}
+.cal-day-time{
+  text-align: center;
+  height: 100%;
+  line-height: 3rem;
+  font-size: 1.3rem;
+}
+.table-month-th{
+  background: #f2f7f8;
+  color: #54667a;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 20px;
+  padding: 7px 0px;
+  text-transform: uppercase;
+}
+#cal-day-box .cal-day-hour:nth-child(odd){
+  background-color: #fff;
+}
+#cal-day-box .cal-day-hour:nth-child(even){
+  background-color: #fafafa;
+}
+.cal-year-box [class*="span"]{
+  cursor: pointer;
+}
+.cal-month-day{
+  cursor: pointer;
+}
+#cal-day-box .cal-day-hour-part{
+  cursor: pointer;
+}
+select.form-control:not([size]):not([multiple]){
+  height: 38px;
+}
+.select2-container .select2-choice{
+  height: 38px;
+}
+.select2-container .select2-choice > .select2-chosen{
+  height: 100%;
+  padding: 8px 0;
+}
+.select2-container.select2-container-disabled .select2-choice .select2-arrow{
+  padding: 8px 0;
+}
+.select2-container .select2-choice .select2-arrow{
+  padding: 8px 0;
 }
