--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -1,3 +1,7 @@
+<div class="d-block pb-3 text-right">
+	<a id="startEdit" class="btn btn-warning" href="#Edit"><i class="fa fa-pencil-square-o mr-2" aria-hidden="true"></i>Edit</span>
+	<a id="exitEdit" class="btn btn-warning"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i>Save & Back</a>
+</div>
 <!-- Edit this file to change the layout of the detail view form -->
 <nav aria-label="breadcrumb">
 	<ol class="breadcrumb">
@@ -67,8 +71,8 @@
 		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Review" role="tab"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Review</span></a> </li>
 
 	</ul>
-	<a id="startEdit" href="#Edit">Edit</span>
-	<a id="exitEdit" href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none">Back</a>
+	<!-- <a id="startEdit" href="#Edit">Edit</span>
+	<a id="exitEdit" href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none">Back</a> -->
 		
 	<!-- <div class="btn-group" role="group" aria-label="Basic example">
 		<button type="button" class="btn btn-secondary" data-target="#carouselDetail" data-slide-to="0"
@@ -437,24 +441,36 @@
 
 	<!-- DV action buttons -->
 	<hr class="hidden-md hidden-lg">
-	<div class="col-md-4 col-lg-2" id="projects_dv_action_buttons">
-			<div class="btn-toolbar">
-				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
-					<%%UPDATE_BUTTON%%>
-				</div><p></p>
-				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
-					<%%DESELECT_BUTTON%%>
-					<%%DVPRINT_BUTTON%%>
-					<%%DELETE_BUTTON%%>
-				</div><p></p>
-				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
-					<%%INSERT_BUTTON%%>
-				</div>
-				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
-					<%%ATTACH_BUTTON%%>
-				</div>
+	<!-- <div class="col-md-4 col-lg-2" id="projects_dv_action_buttons">
+		<div class="btn-toolbar">
+			<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
+				<%%UPDATE_BUTTON%%>
+			</div><p></p>
+			<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
+				<%%DESELECT_BUTTON%%>
+				<%%DVPRINT_BUTTON%%>
+				<%%DELETE_BUTTON%%>
+			</div><p></p>
+			<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
+				<%%INSERT_BUTTON%%>
+			</div>
+			<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
+				<%%ATTACH_BUTTON%%>
 			</div>
 		</div>
+	</div> -->
+	<div id="adminActions" class="adminActions">
+		<input type="checkbox" name="adminToggle" class="adminToggle" />
+		<a class="adminButton" href="#!"><i class="fa fa-ellipsis-v"></i></a>
+		<div class="adminButtons">
+			<%%UPDATE_BUTTON%%>
+			<%%DESELECT_BUTTON%%>
+			<%%DVPRINT_BUTTON%%>
+			<%%DELETE_BUTTON%%>
+			<%%INSERT_BUTTON%%>
+			<%%ATTACH_BUTTON%%>
+		</div>
+	</div>
 </div>
 
 
